added burd application form

--- a/main/client/themes/burd/submission_delete_content.html
+++ b/main/client/themes/burd/submission_delete_content.html
@@ -1,4 +1,10 @@
-<template name="brbSDelCbrbAnket">
+<template name="burdSDelCanketBurd">
+    <!--
+        template name:
+            username: burd;
+            'SDelC' - must be included in between
+            form name: anketBurd;
+    -->
     <h3>{{ state$object.title }}</h3>
 
     <form id="submissionDeleteForm">
