--- a/main/client/themes/burd/submission_list_content.html
+++ b/main/client/themes/burd/submission_list_content.html
@@ -1,5 +1,10 @@
-<template name="brbSLCbrbAnket">
-
+<template name="burdSLCanketBurd">
+    <!--
+        template name:
+            username: burd;
+            'SLC' - must be included in between
+            form name: anketBurd;
+    -->
     <h3>{{ state$form.title }}</h3>
     <h4 class="text-underline">Ажлын байрны анкет бөглөсөн:</h4>
     <br>
