--- a/main/client/themes/brb/submission_list_content.html
+++ b/main/client/themes/brb/submission_list_content.html
@@ -22,12 +22,12 @@
                     {{#each state$objects }}
                         <tr>
                             <td>{{ moFormat createdDate 'YYYY-MM-DD HH:MM' }}</td>
-                            <td>{{ burdPosition }}</td>
-                            <td>{{ burdLastName}} {{ burdFirstName }}</td>
-                            <td>{{ burdGender }}</td>
-                            <td>{{ burdRegisterNumber }}</td>
-                            <td>{{ burdBirthDate }}</td>
-                            <td>{{ burdEducationLevel }}</td>
+                            <td>{{ fPosition }}</td>
+                            <td>{{ lastName}} {{ firstName }}</td>
+                            <td>{{ gender }}</td>
+                            <td>{{ registerNumber }}</td>
+                            <td>{{ birthDate }}</td>
+                            <td>{{ educationLevel }}</td>
                             <td>
                                 <a href="/forms/submission/detail/{{ formId }}/?subId={{ _id }}">
                                     <span class="glyphicon glyphicon-eye-open text-center"></span>
