--- a/main/client/themes/brb/submission_detail_content.html
+++ b/main/client/themes/brb/submission_detail_content.html
@@ -82,7 +82,7 @@
             </div>
         </div>
 
-        <div id="education" class="panel panel-info brb-panel brb-panel-education">
+        <div id="education" class="panel panel-info brb-panel">
             <div class="panel brb-panel-header">
                 <p class="brb-panel-title">Боловсрол ({{ educationLevel }})</p>
             </div>
@@ -148,9 +148,38 @@
                 </table>
             </div>
         </div>
+        <div id="certification" class="panel panel-warning brb-panel">
+            <div class="panel brb-panel-header">
+                <p class="brb-panel-title">Сургалт дамжаанд хамрагдсан байдал</p>
+            </div>
+            <div class="panel panel-body">
+                <table class="table table-hover table-bordered">
+                    <thead class="bold">
+                        <tr>
+                            <th>Сэдэв, чиглэл</th>
+                            <th>Газар</th>
+                            <th>Эхэлсэн огноо</th>
+                            <th>Үргэлжилсэн хугацаа</th>
+                            <th>Гэрчилгээний дугаар</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {{ #each certification }}
+                        <tr class="center">
+                            <td>{{ certArea }}</td>
+                            <td>{{ certLocation }}</td>
+                            <td>{{ certStarted }}</td>
+                            <td>{{ certDuration }}</td>
+                            <td>{{ certNumber }}</td>
+                        </tr>
+                        {{ /each }}
+                    </tbody>
+                </table>
+            </div>
+        </div>
         <div id="emergency" class="panel panel-warning brb-panel brb-panel-emergency">
             <div class="panel brb-panel-header">
-                <p class="brb-panel-title brb-panel-title-emergency">Яаралтай үед холбоо барих</p>
+                <p class="brb-panel-title">Яаралтай үед холбоо барих</p>
             </div>
             <div class="panel panel-body">
                 <table class="table table-hover table-bordered">
@@ -172,9 +201,7 @@
                     </tbody>
                 </table>
             </div>
-
         </div>
-
     </div>
     <!-- /container -->
     {{/ with }}
