capitalbank template names change

--- a/main/client/themes/capitalbank/layout.html
+++ b/main/client/themes/capitalbank/layout.html
@@ -1,4 +1,4 @@
-<template name="brbLayout">
+<template name="capitalbankLayout">
     <!-- Page Content -->
     <div id="page-content-wrapper">
         <div class="container-fluid">
