--- a/main/client/themes/capitalbank/submission_detail_content.html
+++ b/main/client/themes/capitalbank/submission_detail_content.html
@@ -1,4 +1,4 @@
-<template name="brbSDetCbrbAnket">
+<template name="capitalbankSDetCbrbAnket">
     {{# with state$object }}
     <!-- Fixed navbar -->
     <nav class="navbar navbar-default navbar-fixed-top brb-navbar">
@@ -14,7 +14,7 @@
             </div>
         </div>
     </nav>
-    <div class="container brb-container brb-font">
+    <div class="container capitalbank-container capitalbank-font">
         <div id="job" class="panel panel-default brb-panel">
             <div class="panel brb-panel-header">
                 <p class="brb-panel-title">Үндсэн мэдээлэл</p>
