capitalbank some error fix

--- a/main/client/themes/capitalbank/submission_list_content.html
+++ b/main/client/themes/capitalbank/submission_list_content.html
@@ -1,4 +1,4 @@
-<template name="capitalbankSLCbrbAnket">
+<template name="capitalbankSLCcaptialbankAnket">
 
     <h3>{{ state$form.title }}</h3>
     <h4 class="text-underline">Ажлын байрны анкет бөглөсөн:</h4>
