added nissan theme

--- a/main/client/themes/nissan/submission_delete_content.html
+++ b/main/client/themes/nissan/submission_delete_content.html
@@ -1,4 +1,4 @@
-<template name="brbSDelCbrbAnket">
+<template name="nissanSDelCnissanAnket">
     <h3>{{ state$object.title }}</h3>
 
     <form id="submissionDeleteForm">
