--- a/main/client/themes/nissan/submission_list_content.html
+++ b/main/client/themes/nissan/submission_list_content.html
@@ -1,4 +1,4 @@
-<template name="brbSLCbrbAnket">
+<template name="nissanSLCnissanAnket">
 
     <h3>{{ state$form.title }}</h3>
     <h4 class="text-underline">Ажлын байрны анкет бөглөсөн:</h4>
@@ -14,7 +14,6 @@
                         <th>Хүйс</th>
                         <th>Регистрийн дугаар</th>
                         <th>Төрсөн огноо</th>
-                        <th>Боловсрол</th>
                         <th></th>
                     </tr>
                 </thead>
@@ -22,12 +21,11 @@
                     {{#each state$objects }}
                         <tr>
                             <td>{{ moFormat createdDate 'YYYY-MM-DD HH:MM' }}</td>
-                            <td>{{ fPosition }}</td>
-                            <td>{{ lastName}} {{ firstName }}</td>
-                            <td>{{ gender }}</td>
-                            <td>{{ registerNumber }}</td>
-                            <td>{{ birthDate }}</td>
-                            <td>{{ educationLevel }}</td>
+                            <td>{{ nPosition }}</td>
+                            <td>{{ nLastName}} {{ nFirstName }}</td>
+                            <td>{{ nGender }}</td>
+                            <td>{{ nRegister }}</td>
+                            <td>{{ nBirthday }}</td>
                             <td>
                                 <a href="/forms/submission/detail/{{ formId }}/?subId={{ _id }}">
                                     <span class="glyphicon glyphicon-eye-open text-center"></span>
