page_anket.html form.nmtec.co

--- a/main/client/themes/bbtvmongolia/submission_detail_content.html
+++ b/main/client/themes/bbtvmongolia/submission_detail_content.html
@@ -148,11 +148,12 @@
                         {{ /each }}
                     </tbody>
                 </table>
+                <br>
                 <table><tr>
-                    <td>Хийж байсан бүтээл, судалгааны ажил</td>
+                    <td>Хийж байсан бүтээл, судалгааны ажил:  </td>
                     <td>
-                        <a href=" {{ picStatus }}" target="_blank">
-                            <img class="bbtvmongolia-thumbnail" src="{{ research }}" alt="Хийж байсан бүтээл, судалгааны ажил" width="200" title="Хийж байсан бүтээл, судалгааны ажил"/>
+                        <a href="{{ research }}" target="_blank">
+                            <i class="glyphicon glyphicon-save"></i> татах
                         </a>
                     </td>
                 </tr></table>
