--- a/main/client/themes/monnisgroup/layout.html
+++ b/main/client/themes/monnisgroup/layout.html
@@ -1,10 +1,11 @@
 <template name="monnisgroupLayout">
     <!-- Page Content -->
     <div id="page-content-wrapper">
-        <div class="container-fluid">
+        <div class="container">
             <div class="row">              
                 <div class="col-sm-12">
-                    <a href="#" class="pull-right btn btn-primary btn-sm" onclick="Meteor.logout()">Гарах</a>
+                    <a href="#" class="pull-right btn btn-primary btn-sm" onclick="Meteor.logout()"> Гарах  <span class="glyphicon glyphicon-off"></span></a>
+                    <br>
                     {{> render component=state$content}}
                 </div>
             </div>
