--- a/main/client/themes/monnisgroup/layout.html
+++ b/main/client/themes/monnisgroup/layout.html
@@ -4,7 +4,7 @@
         <div class="container">
             <div class="row">              
                 <div class="col-sm-12">
-                    <a href="#" class="pull-right btn btn-primary btn-sm" onclick="Meteor.logout()"> Гарах  <span class="glyphicon glyphicon-off"></span></a>
+                    <a href="#" class="pull-right btn btn-primary btn-sm no-print" onclick="Meteor.logout()"> Гарах  <span class="glyphicon glyphicon-off"></span></a>
                     <br>
                     {{> render component=state$content}}
                 </div>
