header footer hide css

--- a/main/client/themes/monnisgroup/submission_detail_content.html
+++ b/main/client/themes/monnisgroup/submission_detail_content.html
@@ -23,7 +23,7 @@
         <div class="monnisgroup-container monnisgroup-font">
             <div>
                 <h4 class="pull-left">Үнэ цэнийг цогцлооно</h4>
-                <img class="img pull-right" src="http://www.monnis.com/images/logo.png">
+                <img class="img pull-right monnis_logo" src="http://www.monnis.com/images/logo.png">
             </div>
             <div class="clearfix"></div>
             <div class="row">
@@ -67,7 +67,6 @@
                     </table>
                 </div>
             </div>
-            <hr>
             <div id="main" class="panel panel-default monnisgroup-panel">
                 <div class="panel monnisgroup-panel-header">
                     <p class="monnisgroup-panel-title">2. ҮНДСЭН МЭДЭЭЛЭЛ (хувийн мэдээлэл)</p>
